# vmware-exit-intelligence-agent

./: .gitignore  LICENSE  PHASE1_FINALIZATION.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
agent/: cli.py  models.py
agent/analyzer/: classifier.py  rules.py  scoring.py
agent/reporter/: csv_out.py  json_out.py  md_report.py
agent/utils/: log.py
examples/: sample_inventory.json
phase1_output/: classification.json  report.md  summary.csv
rules/: classification_rules.yaml
tests/: test_phase1_contract.py
